--- a/dot/waybar/style.css
+++ b/dot/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: 'JetBrainsMono Nerd Font';
+    font-family: 'Iosevka Custom';
     font-size: 14px;
     min-height: 0;
 }
