--- a/dot/wofi/style.css
+++ b/dot/wofi/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "Iosevka Custom";
     font-size: 15px;
     font-weight: 500;
 }
