--- a/dot/wofi/style.css
+++ b/dot/wofi/style.css
@@ -1,54 +1,54 @@
 * {
-    font-family: "Iosevka Custom";
-    font-size: 15px;
-    font-weight: 500;
+  font-family: "Iosevka Custom";
+  font-size: 15px;
+  font-weight: 500;
 }
 
 #window {
-    background-color: --wofi-color0;
-    color: --wofi-color2;
-    border: 0px solid --wofi-color1;
-    border-radius: 10px;
+  background-color: --wofi-color0;
+  color: --wofi-color2;
+  border: 0px solid --wofi-color1;
+  border-radius: 0px;
 }
 
 #outer-box {
-    padding: 10px;
+  padding: 10px;
 }
 
 #input {
-    font-weight: 600;
-    font-size: 16px;
-    background-color: --wofi-color1;
-    border: 0px solid --wofi-color3;
-    padding: 4px 12px;
+  font-weight: 600;
+  font-size: 16px;
+  background-color: --wofi-color1;
+  border: 0px solid --wofi-color3;
+  padding: 4px 12px;
 }
 
 #scroll {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 #inner-box {
 }
 
 #img {
-    padding-right: 8px;
+  padding-right: 8px;
 }
 
 #text {
-    color: --wofi-color2;
+  color: --wofi-color2;
 }
 
 #text:selected {
-    color: --wofi-color0;
+  color: --wofi-color0;
 }
 
 #entry {
-    padding: 6px;
+  padding: 6px;
 }
 
 #entry:selected {
-    background-color: --wofi-color3;
-    color: --wofi-color0;
+  background-color: --wofi-color3;
+  color: --wofi-color0;
 }
 
 #unselected {
@@ -57,6 +57,7 @@
 #selected {
 }
 
-#input, #entry:selected {
-    border-radius: 10px;
+#input,
+#entry:selected {
+  border-radius: 10px;
 }
