--- a/dot/vivaldi/custom.css
+++ b/dot/vivaldi/custom.css
@@ -1,7 +1,6 @@
 button.window-minimize,
 button.window-maximize,
-button.window-close
-{
+button.window-close {
   color: transparent;
   background-color: transparent !important;
 }
@@ -25,6 +24,25 @@ button.vivaldi {
   padding: 5px 0 0;
 }
 
-.UrlField>input[placeholder$="Search or enter an address"]::placeholder {
+.UrlBar-AddressField,
+.dim-blurred:not(.hasfocus) .UrlBar-AddressField {
+  border-width: 0px;
+  background-color: transparent;
+}
+
+.color-behind-tabs-on .UrlBar-AddressField:focus-within {
+  outline-offset: 0px;
+  outline-width: 0px;
+}
+
+.UrlField > input[placeholder$="Search or enter an address"]::placeholder {
   color: transparent !important;
+}
+
+.UrlField,
+.UrlBar-UrlField {
+  text-align: center;
+  justify-content: center;
+  font-size: 1.06em;
+  font-weight: 600;
 }
