--- a/dot/waybar/style.css
+++ b/dot/waybar/style.css
@@ -9,9 +9,8 @@
 window#waybar {
   background: rgba(0, 0, 0, 0.4);
   color: @theme_bg_color;
-  border: 2px solid rgba(60, 85, 105, 0.4);
-  border-top: none;
-  border-radius: 0 0 10px 10px;
+  border-top: 2px solid rgba(60, 85, 105, 0.4);
+  border-radius: 11px 11px 0 0;
 }
 
 tooltip {
@@ -30,8 +29,7 @@ tooltip label {
   padding: 0 5px 0 10px;
 }
 
-#custom-launcher,
-#custom-power {
+#custom-launcher {
   font-size: 18px;
   padding: 0 5px 0 10px;
 }
